코드정리, ai 알고리즘 작성중

--- a/src/test.html
+++ b/src/test.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <div class="notice">
-    <p>score : <span></span></p>
+        <input type="number" id="inputNum" min="2" max="10" value="6">
+        <p>score : <span></span></p>
     </div>
     <div class="wrap">
         <!-- <div class="inner"></div> -->
     </div>
+    <button type="button" id="newGame">new game</button>
     <script src="test.js"></script>
     
 </body>
