openCard 구조 수정중

--- a/src/test.html
+++ b/src/test.html
@@ -15,6 +15,7 @@
         <!-- <div class="inner"></div> -->
     </div>
     <button type="button" id="newGame">new game</button>
+    <button type="button" id="aiTest">ai test</button>
     <script src="test.js"></script>
     
 </body>
