동일 작업중 (com 알고리즘>리스트 생성)

--- a/src/test.html
+++ b/src/test.html
@@ -16,6 +16,7 @@
     </div>
     <button type="button" id="newGame">new game</button>
     <button type="button" id="aiTest">ai test</button>
+    <button type="button" id="checkArray">check array</button>
     <script src="test.js"></script>
     
 </body>
