com_selectRandom 작성

--- a/src/test.html
+++ b/src/test.html
@@ -10,6 +10,9 @@
     <div class="notice">
         <input type="number" id="inputNum" min="2" max="10" value="6">
         <p>score : <span></span></p>
+        <p>open array: <span id="test_openArray"></span></p>
+        <p>match array: <span id="test_matchArray"></span></p>
+        <p>etc info: <span id="test_etc"></span></p>
     </div>
     <div class="wrap">
         <!-- <div class="inner"></div> -->
