--- a/src/test.html
+++ b/src/test.html
@@ -9,17 +9,17 @@
 <body>
     <div class="notice">
         <input type="number" id="inputNum" min="2" max="10" value="6">
-        <p>score : <span></span></p>
-        <p>open array: <span id="test_openArray"></span></p>
-        <p>match array: <span id="test_matchArray"></span></p>
-        <p>etc info: <span id="test_etc"></span></p>
+        <p id="userScore">user score : <span></span></p>
+        <p id="comScore">com score : <span></span></p>
+        <!-- <p>array : openCard: <span id="test_openArray"></span></p> -->
+        <!-- <p>array : matchCard: <span id="test_matchArray"></span></p> -->
+        <!-- <p>etc info: <span id="test_etc"></span></p> -->
     </div>
     <div class="wrap">
         <!-- <div class="inner"></div> -->
     </div>
     <button type="button" id="newGame">new game</button>
     <button type="button" id="aiTest">ai test</button>
-    <button type="button" id="checkArray">check array</button>
     <script src="test.js"></script>
     
 </body>
