--- a/src/test.html
+++ b/src/test.html
@@ -34,14 +34,14 @@
                                     <span class="unit">s</span>
                                 </div>
 
-                                <div class="group_checkbox">
+                                <div class="group_checkbox mobile_gridRow2 mobile_gridCol2">
                                     <label for="input_noCount" class="cursorPointer">제한 없음</label>
                                     <input type="checkbox" id="input_noCount" class="transparent">
                                     <label for="input_noCount" class="checkboxStyle cursorPointer"></label>
                                 </div>
                             </li>
                             
-                            <li class="grid">
+                            <li class="grid mobile_grid">
                                 카드 크기
                                 <ul class="group_modalBtn">
                                     <li>
@@ -91,7 +91,7 @@
                                     <label for="input_keepTurn" class="checkboxStyle cursorPointer"></label>
                                 </div>
                             </li>
-                            <li class="grid">
+                            <li class="grid mobile_grid">
                                 난이도
                                 <ul class="group_modalBtn">
                                     <li>
@@ -177,11 +177,11 @@
                 <div class="modal_groupBtn">
                     <p>※ 카드 크기를 제외한 변경된 옵션은 다음 게임부터 적용됩니다.</p>
                     <div class="modal_groupBtnInner">
-                        <button type="button" id="btn_newSingle2" class="btn_commonStyle btn_newGame single">
+                        <button type="button" class="btn_commonStyle btn_newGame single">
                             <i class="fa-solid fa-rotate-right"></i>
                             새 게임<span></span>혼자
                         </button>
-                        <button type="button" id="btn_newVs2" class="btn_commonStyle btn_newGame vs">
+                        <button type="button" class="btn_commonStyle btn_newGame vs">
                             <i class="fa-solid fa-rotate-right"></i>
                             새 게임<span></span>대전
                         </button>
@@ -205,11 +205,11 @@
         </div>
         <div class="group_btn">
             <div class="group_btnInner">
-                <button type="button" id="btn_newSingle" class="btn_commonStyle btn_newGame single">
+                <button type="button" class="btn_commonStyle btn_newGame single">
                     <i class="fa-solid fa-rotate-right"></i>
                     새 게임<span></span>혼자
                 </button>
-                <button type="button" id="btn_newVs" class="btn_commonStyle btn_newGame vs">
+                <button type="button" class="btn_commonStyle btn_newGame vs">
                     <i class="fa-solid fa-rotate-right"></i>
                     새 게임<span></span>대전
                 </button>
